Fix: links in dark mode

--- a/website/src/components/Scholarships/ScholarshipComponent.css
+++ b/website/src/components/Scholarships/ScholarshipComponent.css
@@ -21,7 +21,7 @@ a {
   color: var(--text-color);
 }
 
-.card-body {
+.card-under-image {
   background-color: var(--background-color);
 }
 /*
